Closed Bug 12848 Opened 25 years ago Closed 25 years ago

[PP] Clicking inside window and moving mouse around window causes a crash

Categories

(Core :: DOM: Selection, defect, P2)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: mmastrac, Assigned: rods)

Details

Attachments

(1 file)

Crash on the lastest win32 build when clicking the mouse inside the window and
dragging it around the apprunner window.

To reproduce:

1)  Load http://www.mozilla.org in the browser
2)  Click the mouse button in the middle of the text in the topmost news box
3)  While holding the mouse button down, drag the cursor out the application
through the right hand side
4)  While still holding the button, move the cursor up to the top left corner of
the application, but don't reenter the window
5)  Follow a path around the outside of the window.  By the time you hit the top
left corner, you should get a GPF and the app will die.

Expected behaviour:

No crash :)

As far as i can tell, this bug seems page independent.  It seems to be a generic
selection bug.  I'm attaching a screenshot with more detail of how to reproduce
the bug.
Attached image Path for mouse movement
okay...  just some additional comments.

1. Start this from a fresh launch of apprunner.
2. You'll need to move the apprunner window to the middle of the screen so you
have enough room to move the mouse.
Severity: normal → major
Summary: Clicking inside window and moving mouse around window causes a crash → [PP] Clicking inside window and moving mouse around window causes a crash
Excellent catch, and very well written bug report! Raising severity to "Major"
due to crash.

(I see this on the 1999082708 builds, but cannot reproduce on the 1999083010 Mac
OS or 1999082513 Linux builds.)
Priority: P3 → P2
Target Milestone: M12
I agree, excellent bug report.  I'm doing some investigation now.
Assignee: mjudge → rods
assigned to rods.  looks like DND over the apprunner console window is the
problem.  not sure if or why we're initiating a DND from a normal text
selection, but regardless this should get fixed.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
This had to do with click down and holding the mouse and then doing a drag
into the console window. Fixed.
Status: RESOLVED → VERIFIED
This is --- as far as I can discern --- fixed in the 9.14.99 Win32 build, using
the excellent reproduction steps provided by mmastrac@ucalgary.ca. Thus, marking
as "Verified".

(mmastrac@ucalgary.ca, please feel free to double-check and add your $.02.
Thanks!)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: