Bizzare edge case where click and then dragging outside the window into the console window crashes in MouseTrailer. This had to do with an invalid window getting set into the MouseTrailer. The invalid window comes from the mouse hitting the frame of the app and then the console window. Bug #12848